# subprocess-c

./: CMakeLists.txt  README.md  subprocess.c  subprocess.h  test.c  test_shell.c
cxx/: except.h  pipes.cpp  pipes.h  sharedmem.cpp  subprocess.cpp
examples/: CMakeLists.txt  example_communicate.c  example_echo.c  example_echo_stdin.c  example_func.c  example_func_sharedmem.c  example_grep_stdin.c  example_kill.c  example_shell.c  example_shell_stdin.c
examples/cxx/: CMakeLists.txt  example_echo.cpp  example_func_sharedmem.cpp
include/: subprocess.h
include/cxx/: sharedmem.h  subprocess.h
src/: subprocess.c
src/cxx/: pipes.cpp  sharedmem.cpp  subprocess.cpp
