cmake_minimum_required(VERSION 3.10)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)

add_executable(subprocess_example_func example_func.c)
target_link_libraries(subprocess_example_func subprocess)

add_executable(subprocess_example_func_sharedmem example_func_sharedmem.c)
target_link_libraries(subprocess_example_func_sharedmem subprocess)

add_executable(subprocess_example_echo example_echo.c)
target_link_libraries(subprocess_example_echo subprocess)

add_executable(subprocess_example_grep_stdin example_grep_stdin.c)
target_link_libraries(subprocess_example_grep_stdin subprocess)

add_executable(subprocess_example_communicate example_communicate.c)
target_link_libraries(subprocess_example_communicate subprocess)

add_executable(subprocess_example_kill example_kill.c)
target_link_libraries(subprocess_example_kill subprocess)

add_subdirectory(cxx)
